hafnium-unit-test: add an explicit job for unit tests
Introduce a standalone Jenkins Job config for host unit tests
and explicitly scope the existing job to QEMU-only.

Key Changes:
===========
* Add hafnium-unit-test.yaml
  - Exports RUN_UNIT_ONLY=true and invokes kokoro/build.sh.
* Update hafnium-build-test-qemu.yaml
  - Exports RUN_QEMU_ONLY=true before calling kokoro/build.sh

* Clear, separate CI jobs for fast host tests vs QEMU functional tests.

* Enables parallelization and quicker feedback loops.

Change-Id: Icd55a4d07b0c56500de9ff478f0ca0ba5fb5678a
Signed-off-by: Jayanth Dodderi Chidanand <jayanthdodderi.chidanand@arm.com>

--- a/hafnium-unit-test.yaml
+++ b/hafnium-unit-test.yaml
@@ -1,25 +1,15 @@
 - job:
-    name: hafnium-build-test-qemu
+    name: hafnium-unit-test
     project-type: freestyle
     defaults: global
     properties:
       - build-discarder:
           days-to-keep: 90
           num-to-keep: 90
-#    parameters:
-#        - string:
-#            name: GERRIT_PROJECT
-#            default: 'hafnium/hafnium'
-#        - string:
-#            name: GERRIT_BRANCH
-#            default: 'master'
-#        - string:
-#            name: GERRIT_REFSPEC
-#            default: 'refs/heads/master'
     disabled: false
     node: docker-amd64-hafnium-noble
     concurrent: true
-    display-name: 'Hafnium builder (QEMU)'
+    display-name: 'Hafnium Unit Test builder'
     scm:
         - git:
             url: https://review.trustedfirmware.org/${GERRIT_PROJECT}
@@ -50,8 +40,6 @@
               project-pattern: 'hafnium/hafnium'
               branches:
                 - branch-pattern: 'master'
-#            silent: false
-#            silent-start: true
     wrappers:
         - timestamps
         - timeout:
@@ -64,7 +52,7 @@
             #!/bin/bash
 
             set -ex
-            export RUN_QEMU_ONLY=true
+            export RUN_UNIT_ONLY=true
             kokoro/build.sh
     publishers:
         - archive:
