--- a/hafnium-acs-test.yaml
+++ b/hafnium-acs-test.yaml
@@ -12,6 +12,8 @@
           skip-tag: true
           shallow-clone: true
           wipe-workspace: false
+          submodule:
+            recursive: true
 - scm:
     name: hafnium
     scm:
