Update Hafnium [LTS2.14] job view: Filter view to show only related jobs
Update Hafnium [LTS2.14] job view,
so that both the build queue and running executors
display only jobs matching this view.

Change-Id: Ib56ec7b474b66f557efa7b73581128f80c64bac4
Signed-off-by: Arthur She <arthur.she@linaro.org>

--- a/Hafnium-LTS2.14.yaml
+++ b/Hafnium-LTS2.14.yaml
@@ -2,6 +2,8 @@
     name: Hafnium-LTS2.14
     view-type: list
     regex: ^hafnium-lts2.14-.*
+    filter-queue: true
+    filter-executors: true
     columns:
         - status
         - weather
