hafnium-lts-automation.yaml: fix bug
Add a default value for the variable MAIN_PROJ

Change-Id: I5d58e4bf6124c515f4789faa5e16c54407743572
Signed-off-by: Arthur She <arthur.she@linaro.org>

--- a/hafnium-lts-automation.yaml
+++ b/hafnium-lts-automation.yaml
@@ -85,7 +85,7 @@
 
           # Create branch on the sub-modules
           echo "Create branch ${BRANCH} on the sub-modules"
-          repos="${MAIN_PROJ} \
+          repos="${MAIN_PROJ:-} \
                  hafnium/project/reference \
                  hafnium/prebuilts \
                  hafnium/third_party/googletest \
