--- a/hafnium-lts-automation.yaml
+++ b/hafnium-lts-automation.yaml
@@ -96,7 +96,7 @@
           for r in ${repos};
           do
               echo "Create branch \"${BRANCH}\" from tag \"${FORKED_TAG}\" in the \"${r}\" project"
-              if ! git ls-remote --exit-code "${GERRIT_SERVER}/${r}" "${BRANCH}" >/dev/null 2>&1; then
+              if ! git ls-remote --exit-code "${GERRIT_SERVER}/${r}" "refs/heads/${BRANCH}" ; then
                 git -C "${_workdir}" fetch ${GERRIT_SERVER}/${r} ${FORKED_TAG} || \
                 (echo "Can not find \"${FORKED_TAG}\" tag on ${r} repository"; exit 1)
                 git -C "${_workdir}" push ${GERRIT_SERVER}/${r} FETCH_HEAD^{commit}:refs/heads/${BRANCH}
@@ -122,7 +122,7 @@
                 "${GERRIT_OLDREV:-}" = "0000000000000000000000000000000000000000" ] || exit 1
 
               # Check if branch exists already in TF-A
-              if git ls-remote --exit-code "${GERRIT_SERVER}/${COUNTERPART_PROJ}" "${BRANCH}" >/dev/null 2>&1; then
+              if git ls-remote --exit-code "${GERRIT_SERVER}/${COUNTERPART_PROJ}" "refs/heads/${BRANCH}"; then
                 echo "Branch exists in ${COUNTERPART_PROJ}, do not trigger counterpart"
                 exit 1
               fi
