ci: parameterize hafnium static checks job
* Introduce Gerrit project, branch, and refspec parameters to
  enable manual execution of the Hafnium static-checks job.

* A display name is also added to improve CI job visibility.

Change-Id: I6622a839ec540ab624e618a99cb8ec72b2c5ce91
Signed-off-by: Jayanth Dodderi Chidanand <jayanthdodderi.chidanand@arm.com>

--- a/hafnium-static-checks.yaml
+++ b/hafnium-static-checks.yaml
@@ -8,7 +8,19 @@
           num-to-keep: 90
     disabled: false
     node: docker-amd64-hafnium-noble
+    display-name: 'Hafnium Static-Checks'
     concurrent: true
+    # Gerrit-style parameters to support manual runs
+    parameters:
+      - string:
+          name: GERRIT_PROJECT
+          default: 'hafnium/hafnium'
+      - string:
+          name: GERRIT_BRANCH
+          default: 'master'
+      - string:
+          name: GERRIT_REFSPEC
+          default: '+refs/heads/master:refs/remotes/origin/master'
     scm:
         - git:
             url: https://review.trustedfirmware.org/${GERRIT_PROJECT}
