--- a/hafnium-check-docs.yaml
+++ b/hafnium-check-docs.yaml
@@ -1,6 +1,6 @@
 - job:
     name: hafnium-check-docs
-    display-name: 'Hafnium - Check Docs'
+    display-name: 'Hafnium Check-Docs'
     description: Build docs for hafnium
     project-type: freestyle
     node: docker-amd64-hafnium-noble
@@ -15,29 +15,30 @@
 
     parameters:
       - string:
-          name: URL
-          description: Hafnium Repository URL
-          default: https://review.trustedfirmware.org/hafnium/hafnium
+          name: GERRIT_PROJECT
+          description: 'Gerrit project name (repo path)'
+          default: 'hafnium/hafnium'
       - string:
-          name: REFSPEC
-          description: Git refspec to fetch
-          default: +refs/heads/*:refs/remotes/origin/*
+          name: GERRIT_BRANCH
+          description: 'Branch to check out'
+          default: 'master'
       - string:
-          name: REFNAME
-          description: Git refname of the last commit to build.
-          default: origin/master
+          name: GERRIT_REFSPEC
+          description: 'Git refspec to fetch (Gerrit patchset or manual refspec)'
+          default: '+refs/heads/master:refs/remotes/origin/master'
+      # Docs job needs a base branch to detect whether "docs/" changed.
       - string:
           name: REFNAME_BASE
-          description: Base branch ref to compare against
-          default: origin/master
+          description: 'Base branch ref to compare against'
+          default: 'origin/master'
 
     scm:
       - git:
-          url: ${URL}
-          refspec: ${REFSPEC}
+          url: https://review.trustedfirmware.org/${GERRIT_PROJECT}
+          refspec: ${GERRIT_REFSPEC}
           name: origin
           branches:
-            - ${REFNAME}
+            - ${GERRIT_BRANCH}
           skip-tag: true
           shallow-clone: false
           wipe-workspace: true
@@ -83,37 +84,38 @@
           set -euo pipefail
           set -x
 
-          # 1) Ensure heads exist (helps fresh/manual runs)
-          git fetch --no-tags "${URL}" '+refs/heads/*:refs/remotes/origin/*'
+          # 1) Ensure all remote origin/ branches exist
+          git fetch --no-tags "https://review.trustedfirmware.org/${GERRIT_PROJECT}" \
+            '+refs/heads/*:refs/remotes/origin/*'
 
-          # 2) Choose what to fetch
-          # - Gerrit run => use the change ref (GERRIT_REFSPEC)
-          # - Manual run  => use the mapping from REFSPEC (heads)
-          FETCH_SPEC="${REFSPEC}"
-          if [ -n "${GERRIT_REFSPEC:-}" ]; then
-            FETCH_SPEC="${GERRIT_REFSPEC}"
-          fi
+          # 2) Select correct refspec:
+          #  - In Gerrit CI → use GERRIT_REFSPEC injected by Gerrit.
+          #  - Manual run   → use the parameter default or user-entered value.
+          FETCH_SPEC="${GERRIT_REFSPEC}"
 
-          # 3) Fetch and check out the target
-          git fetch --no-tags "${URL}" "${FETCH_SPEC}"
+          # 3) Fetch and checkout the target commit/patchset
+          git fetch --no-tags "https://review.trustedfirmware.org/${GERRIT_PROJECT}" "${FETCH_SPEC}"
           git checkout -qf FETCH_HEAD
 
           echo "HEAD: $(git rev-parse --short HEAD)"
           echo "BASE: ${REFNAME_BASE}"
 
-          # 4) Only build if something under docs/ changed
+          # 4) Find merge-base between HEAD and the base branch
           merge_base="$(git merge-base "${REFNAME_BASE}" HEAD)"
           echo "merge-base: ${merge_base}"
+
+          # 5) Detect whether any docs/ files changed.
+          # Only build if something under docs/ changed.If not, skip the build entirely.
           if ! git diff --name-only "${merge_base}..HEAD" -- docs/ | grep -q .; then
             echo "[docs] No changes under docs/ - skipping (success)."
             exit 0
           fi
-          echo "[docs] Changes under docs/ - building..."
+          echo "[docs] Changes under docs/detected - building..."
 
-          # 5) Install docs extras into Poetry venv
+          # 6) Install docs dependencies in Poetry venv
           poetry -C "$PWD" install --no-root --with docs
 
-          # 6) Build docs (no warnings-as-errors)
+          # 7) Build docs
           poetry run make doc
 
           echo "[docs] Build completed."
