ci: parameterize unit-test job for Gerrit and manual runs
* Add Gerrit-style parameters to the Hafnium unit-test CI job to allow
  both CI-triggered and manual executions.

* This introduces GERRIT_PROJECT, GERRIT_BRANCH, and GERRIT_REFSPEC
  parameters and updates the job display name for improved clarity in
  the CI dashboard.

Change-Id: I4beb4c7deeef5e6e22783c2682fdf5e38389a61e
Signed-off-by: Jayanth Dodderi Chidanand <jayanthdodderi.chidanand@arm.com>

--- a/hafnium-unit-test.yaml
+++ b/hafnium-unit-test.yaml
@@ -9,7 +9,22 @@
     disabled: false
     node: docker-amd64-hafnium-noble
     concurrent: true
-    display-name: 'Hafnium Unit Test builder'
+    display-name: 'Hafnium Unit-Test-Builder'
+
+    # Gerrit-style parameters to allow both CI-triggered and manual runs
+    parameters:
+      - string:
+          name: GERRIT_PROJECT
+          description: 'Gerrit project name (repo path)'
+          default: 'hafnium/hafnium'
+      - string:
+          name: GERRIT_BRANCH
+          description: 'Branch to check out'
+          default: 'master'
+      - string:
+          name: GERRIT_REFSPEC
+          description: 'Git refspec to fetch (Gerrit patchset or manual refspec)'
+          default: '+refs/heads/master:refs/remotes/origin/master'
     scm:
         - git:
             url: https://review.trustedfirmware.org/${GERRIT_PROJECT}
