ci: restrict Hafnium view to mainline jobs only
* Update the Jenkins Hafnium view regex to exclude LTS jobs.

* The view now matches only mainline Hafnium jobs (hafnium-*)
  and explicitly filters out hafnium-lts* entries, keeping the
  dashboard focused on production mainline CI.

Change-Id: I4e709e963bb3256c9d0a4f48f4ae9b796f75d013
Signed-off-by: Jayanth Dodderi Chidanand <jayanthdodderi.chidanand@arm.com>

--- a/Hafnium.yaml
+++ b/Hafnium.yaml
@@ -1,7 +1,7 @@
 - view:
     name: Hafnium
     view-type: list
-    regex: ^hafnium-.*
+    regex: ^hafnium-(?!lts).*
     filter-queue: true
     filter-executors: true
     columns:
