--- a/hafnium-lts-triage.yaml
+++ b/hafnium-lts-triage.yaml
@@ -22,6 +22,13 @@
           default: lts-v2.14
           description: |
             LTS branches
+    scm:
+      - git:
+          url: https://review.trustedfirmware.org/ci/hafnium-job-configs
+          branches:
+            - master
+          skip-tag: true
+          wipe-workspace: true
     triggers:
       - timed: H 5 * * 5 # Run the job at 00:00 every Friday @CTS timezone
     wrappers:
@@ -55,7 +62,7 @@
               CSV_REPORT="${b}_${DATE}.csv"
               git -C ${LTS_REPO_PATH} checkout -b ${b} origin/${b}
 
-              python3 script/hafnium-lts-triage.py --repo ${LTS_REPO_PATH} --csv_path ${START_PATH}/${CSV_REPORT} \
+              python3 ${START_PATH}/script/hafnium-lts-triage.py --repo ${LTS_REPO_PATH} --csv_path ${START_PATH}/${CSV_REPORT} \
               --lts ${b} --gerrit_user ${CI_BOT_USERNAME} --ssh_keyfile ${CI_BOT_KEY} --debug
               [ -f "${START_PATH}/${CSV_REPORT}" ] && echo "${CSV_REPORT}" >> ${START_PATH}/got_report.txt
           done
