feat(ci): enable weekly email notifications for Hafnium-ACS job
* Add email notifications to the hafnium-acs-test CI job for
  scheduled executions.

* The job now sends an email after scheduled (cron) executions by
  detecting TIMERTRIGGER via a shell-based conditional publisher.
  Manual builds do not trigger email notifications.

Change-Id: I696044754cbb91e7402d30c5850c6334c02ad041
Signed-off-by: Jayanth Dodderi Chidanand <jayanthdodderi.chidanand@arm.com>

--- a/hafnium-acs-test.yaml
+++ b/hafnium-acs-test.yaml
@@ -120,7 +120,21 @@
           ${{WORKSPACE}}/hafnium-ci-scripts/acs/builder.sh
           ${{WORKSPACE}}/hafnium-ci-scripts/acs/runner.sh
     publishers:
-        - archive:
-            artifacts: 'logs/*'
+      - archive:
+          artifacts: 'logs/*'
+      - conditional-publisher:
+          - condition-kind: shell
+            condition-command: |
+              echo "$BUILD_CAUSE" | grep -q TIMERTRIGGER
+            action:
+              - email-ext:
+                  always: true
+                  recipients: "madhukar.pappireddy@arm.com, olivier.deprez@arm.com, daniel.boulby@arm.com, jayanthdodderi.chidanand@arm.com, mahesh.reddybireddy@arm.com"
+                  subject: "Hafnium ACS Weekly Job Status"
+                  body: |
+                    Job: ${{JOB_NAME}}
+                    Build: #${{BUILD_NUMBER}}
+                    Result: ${{BUILD_STATUS}}
+                    URL: ${{BUILD_URL}}
     triggers:
-        - timed: '45 16 * * 1'
+      - timed: '45 16 * * 1'
